--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,70 @@
+$gap: 1px;
+$block-size: 100px;
+$hover-color: #ffbfcb;
+$month: 31;
+$start-days: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
+$month-lenght: (
+  28: 0,
+  29: 1,
+  30: 2,
+  31: 3,
+);
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  padding: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+
+  @each $day, $start in $start-days {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: ($start * $block-size) + ($start * $gap);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: $block-size;
+    height: $block-size;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: #eee;
+
+    cursor: pointer;
+    transition: 0.5s;
+
+    &:hover {
+      background-color: $hover-color;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $day from 1 through $month {
+    &__day:nth-child(#{$day})::before {
+      content: "#{$day}";
+      font-size: 30px;
+    }
+  }
 }
