--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,81 @@
-body {
+$days-per-week: 7;
+$total-days: 31;
+$box-width: 100px;
+$day-indexes: (
+  'sun': 0,
+  'mon': 1,
+  'tue': 2,
+  'wed': 3,
+  'thu': 4,
+  'fri': 5,
+  'sat': 6,
+);
+
+.calendar {
+  display: flex;
   margin: 0;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
+  align-items: center;
+
+  &__month {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1px;
+    padding: 10px;
+    width: 757px;
+  }
+
+  &__day {
+    position: relative;
+    width: $box-width;
+    height: $box-width;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &::before {
+      content: "";
+      font-size: 30px;
+    }
+
+    &:hover {
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+      transition: background-color, transform 0.5s;
+    }
+  }
+
+  @each $day, $index in $day-indexes {
+    &--start-#{$day} {
+      .calendar__day:first-child {
+        margin-left: $index * $box-width;
+      }
+    }
+  }
+
+  &--start-sun {
+    .calendar__day {
+      margin-left: 0;
+    }
+  }
+}
+
+@for $length from 28 through 31 {
+  .calendar__month--length-#{$length} {
+    .calendar__day:nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+}
+
+@for $day from 1 through $total-days {
+  .calendar__month {
+    .calendar__day:nth-child(#{$day})::before {
+      content: "#{$day}";
+    }
+  }
 }
