--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,10 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-@import "blocks/container";
 @import "blocks/calendar";
