--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,20 @@
-$day-size: 100px;
+$box-size: 100px;
 $border-width: 1px;
 $border-color: #000;
 $background-color: #eee;
-$background-hover-color: #FFBFCB;
+$background-hover-color: #ffbfcb;
 $font-size: 30px;
 $padding: 10px;
 $columns: 7;
 $gap: 1px;
-$container-width: $columns * ($day-size + $gap) - $gap + 2 * $padding;
+$container-width: $columns * $box-size + ($columns - 1) * $gap;
 $starting-day: sun;
-$days-of-week: (sun, mon, tue, wed, thu, fri, sat);
+$days-of-week: (
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6,
+);
