--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
+@import './utils/variables';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  margin: auto;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: $calendar-padding;
+  width: ($day-width + $day-gap) * 7 + ($calendar-padding * 2);
+  gap: $day-gap;
+
+  &__day {
+    display: flex;
+    width: $day-width;
+    height: $day-height;
+    border: 1px solid black;
+    background-color: $day-bg;
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
+        margin: auto;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      transition-property: background-color, transform;
+      transition-duration: 0.5s;
+      background-color: #ffbfcb;
+      transform: translate(0, -20px);
+    }
+  }
+
+  @each $weekday, $order in $week-days {
+    &--start-day-#{$weekday} {
+      .calendar__day:first-child {
+        margin-left: ($day-gap + $day-width) * $order;
+      }
+    }
+  }
+
+  @each $length in $month-leght {
+    &--month-length-#{$length} {
+      .calendar__day:nth-child(n + #{$length + 1}) {
+        display: none;
+      }
+    }
+  }
 }
