--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,17 @@
 @import './blocks/variables';
 
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
-.container {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .calendar {
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   gap: $calendar-gap;
