style formating fixes

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,9 +1,7 @@
 .calendar {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  column-gap: 1px;
-  row-gap: 1px;
+  flex-flow: row wrap;
+  gap: 1px 1px;
 
   width: $columns-quantity * $square-size + 20px;
   padding: 10px;
@@ -19,7 +17,7 @@
     width: $square-size;
 
     cursor: pointer;
-    
+
     background-color: #eee;
     border: 1px solid black;
     font-family: Arial, sans-serif;
