--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,77 @@
 body {
   margin: 0;
 }
+
+$day-size: 100px;
+$gap-size: 1px;
+$padding-size: 10px;
+$grey-color: #eee;
+$pink-color: #ffbfcb;
+$black-color: #000;
+$days: (
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6,
+);
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+
+  // added border to see padding
+
+  border: 1px solid $black-color;
+  padding: $padding-size;
+  width: $day-size * 7 + $padding-size;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    box-sizing: border-box;
+    border: 1px solid $black-color;
+    background-color: $grey-color;
+    width: $day-size;
+    height: $day-size;
+
+    &:hover {
+      transform: translateY(-20px);
+      cursor: pointer;
+      background-color: $pink-color;
+    }
+
+    @for $dayNum from 1 through 31 {
+      &:nth-child(#{$dayNum}):after {
+        content: "#{$dayNum}";
+        font-size: 30px;
+        font-family: Arial, "Courier New", Courier, monospace;
+      }
+    }
+  }
+
+  &__day:first-child {
+    margin-left: $day-size * 6 + $gap-size * 6;
+  }
+
+  @for $day-index from 28 through 31 {
+    &.calendar--month-length-#{$day-index} {
+      :nth-of-type(n + #{$day-index + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  @each $day-name, $day-index in $days {
+    &.calendar--start-day-#{$day-name} {
+      :first-of-type {
+        margin-left: $day-size * $day-index + $gap-size * $day-index;
+      }
+    }
+  }
+}
