--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,13 @@
+@import 'utils/variables';
+@import 'block/calendar';
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
   margin: 0;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
