--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@ $day-size: 100px;
   width: var(--calendar-width);
   margin: 10px;
   border-collapse: collapse;
+  gap: 1px;
 }
 
 .calendar__day {
@@ -58,7 +59,7 @@ $day-size: 100px;
 }
 
 @each $day,$i in $days {
-  .calendar--start-day-#{day} > .calendar__day:first-child {
+  .calendar--start-day-#{$day} > .calendar__day:first-child {
     margin-left: ($day-size + 1px) * $i;
   }
 }
