--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,15 +20,18 @@ body {
   padding: 10px;
 
   &__day {
-    position: relative;
     display: none;
+    justify-content: center;
+    align-items: center;
+
     box-sizing: border-box;
     min-width: $day-cell-size;
     height: $day-cell-size;
+
     border: 1px solid black;
     background-color: #eee;
 
-    transition: all 0.5s;
+    transition: background-color, transform, 0.5s;
 
     &:hover {
       transform: translateY(-20px);
@@ -36,21 +39,20 @@ body {
       cursor: pointer;
     }
 
+    &::before {
+      font-size: 30px;
+    }
+
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 30px;
       }
     }
   }
 
   @for $i from 28 through 31 {
     &--month-length-#{$i} .calendar__day:nth-child(-n + #{$i}){
-      display: block;
+      display: flex;
     }
   }
 
