--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,24 +1,16 @@
-$days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6,);
-$month-length: 31;
-$day-size: 100px;
+@import './variables';
 
-:root {
-  --day-size: 100px;
-  --day-border: 1px solid black;
-  --day-font-size: 30px;
-  --day-color: #eee;
-  --day-hover-color: #FFBFCB;
-  --day-hover-transform: translateY(-20px);
-  --day-transition: all 0.5s ease;
-  --calendar-width: calc(7 * var(--day-size) + 10px);
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
-
-
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: var(--calendar-width);
+  width: $calendar-width;
   margin: 10px;
   border-collapse: collapse;
   gap: 1px;
@@ -28,20 +20,20 @@ $day-size: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: var(--day-size);
-  height: var(--day-size);
-  border: var(--day-border);
+  width: $day-size;
+  height: $day-size;
+  border: $day-border;
   box-sizing: border-box;
-  background-color: var(--day-color);
+  background-color: $day-color;
   font-family: Arial, sans-serif;
-  font-size: var(--day-font-size);
-  transition: var(--day-transition);
+  font-size: $day-font-size;
+  transition: $day-transition;
 }
 
 .calendar__day:hover {
   cursor: pointer;
-  background-color: var(--day-hover-color);
-  transform: var(--day-hover-transform);
+  background-color: $day-hover-color;
+  transform: $day-hover-transform;
 }
 
 .calendar__day::before {
@@ -55,6 +47,12 @@ $day-size: 100px;
 @for $i from 1 through $month-length {
   .calendar__day:nth-child(#{$i})::before {
     content: "#{$i}";
+  }
+}
+
+@for $i from 28 through $month-length {
+  .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+    display: none;
   }
 }
 
