--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -28,12 +28,15 @@
     box-sizing: border-box;
     background-color: $main-bg-color;
     border: 1px solid $main-black-color;
-    transition: all 0.5s ease;
+    transition: transform, background-color 0.5s ease;
 
     @for $days from 1 through 31 {
       &:nth-child(#{$days})::before {
         content: "#{$days}";
-        margin: auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     }
 
