--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 body {
   margin: 0;
   display: flex;
@@ -7,74 +9,65 @@ body {
 }
 
 .calendar {
-  $day-width: 100px;
-  $day-height: 100px;
-  $days-gap-size: 1px;
-  $days-in-row: 7;
-  $calendar-paddings: 10px;
-  $calendar-width: (
-    $day-width + $days-gap-size ) * $days-in-row - $days-gap-size;
-  $days: (
-    mon,
-    tue,
-    wed,
-    thu,
-    fri,
-    sat,
-    sun
-  );
-
-$transition-duration: 0.5s;
-
-padding: $calendar-paddings;
-max-width: $calendar-width;
-width: 100%;
-display: flex;
-flex-wrap: wrap;
-gap: 1px;
-
-&__day {
-  box-sizing: border-box;
-  background-color: #ccc;
-  width: $day-width;
-  height: $day-height;
-  border: solid 1px #000;
+  padding: $calendar-paddings;
+  max-width: $calendar-width;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  cursor: pointer;
-  transition: background-color $transition-duration,
-    transform $transition-duration;
+  flex-wrap: wrap;
+  gap: 1px;
 
-  &:hover {
-    background-color: #FFBFCB;
-    transform: translateY(-20px);
-  }
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    width: $day-width;
+    height: $day-height;
 
-  @for $i from 1 through 31 {
-    &:nth-child(#{$i}) {
-      &::before {
-        content:'#{$i}';
-        font-family: Arial,
-          Helvetica,
-          sans-serif;
-        font-size: 30px;
-      }
+    font-family: Arial,
+      Helvetica,
+      sans-serif;
+    font-size: 30px;
+
+    background-color: #ccc;
+    border: solid 1px #000;
+    cursor: pointer;
+
+    transition: background-color $transition-duration,
+      transform $transition-duration;
+
+    &:hover {
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
     }
-  }
-}
 
-@each $day, $offset in $days {
-  &--start-day-#{$day} :first-child  {
-    margin-left: $calendar-width - $day-width;
-  }
-}
+    @for $i from 1 through 31 {
 
-@for $i from 28 through 31 {
-  &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
-    display: none;
+      &:nth-child(#{$i}) {
+        &::before {
+          content:'#{$i}';
+        }
+      }
+
+    }
+
   }
-}
+
+  @each $day, $offset in $days {
+
+    &--start-day-#{$day} :first-child {
+      margin-left: ($day-width + $days-gap-size ) * ($offset - $days-gap-size);
+    }
+
+  }
+
+  @for $i from 28 through 31 {
+
+    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+
+  }
 
 }
