remove empty line and transferred the color to the var

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -28,7 +28,7 @@
     height: $size-square;
     box-sizing: border-box;
 
-    border: 1px solid #333;
+    border: 1px solid $border-color;
     background-color: $main-color;
 
     transition: transform .5s linear, background-color .5s linear;
