some changes from comments

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,7 +3,7 @@
   flex-flow: row wrap;
   gap: 1px 1px;
 
-  width: $columns-quantity * $square-size + 20px;
+  width: ($columns-quantity * $square-size )+ ($day-gap * ($columns-quantity - 1));
   padding: 10px;
 
   &__day {
@@ -20,8 +20,6 @@
 
     background-color: #eee;
     border: 1px solid black;
-    font-family: Arial, sans-serif;
-    font-size: 30px;
 
     transition: background-color 0.5s, transform 0.5s;
   }
