--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -1,3 +1,10 @@
 .html {
   margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  font-size: 30px;
 }
