--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,13 +2,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
-  padding: 10px;
-  width: 7 * ($width-day + $gap-day);
+  padding: $calendar-padding;
+  width: calc(7 * ($width-day + $gap-day) + 2 * $calendar-padding - $gap-day) ;
   gap: $gap-day;
 
-  .calendar__day {
+  &__day {
     display: flex;
-    box-sizing: border-box;
     position: relative;
     width: $width-day;
     height: 100px;
@@ -17,13 +16,13 @@
     justify-content: center;
 
     border: 1px solid #000;
-    background-color: #eee;
+    background-color: $color-day;
 
-    transition: all 0.5s;
+    transition: color $transitionDuration, transform $transitionDuration;
 
     &:hover {
       transform: translateY(-20px);
-      background-color: #FFBFCB ;
+      background-color: $color-day-hover ;
       cursor: pointer;
     }
 
@@ -31,6 +30,7 @@
       &:nth-child(#{$i}):before{
         content : '#{$i}';
         position: absolute;
+        text-align: center;
       }
     }
   }
