--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -1,10 +1,18 @@
+*{
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0;
   height: 100vh;
-  
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
 }
+
+
