--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,9 @@
 $width-day: 100px;
 $gap-day: 1px;
+$calendar-padding: 10px;
+$color-day: #eee;
+$transitionDuration: 0.5s;
+$color-day-hover: #FFBFCB;
 $week-day: (
   'mon': 0,
   'tue': 1,
