--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,13 +1,18 @@
-.calendar {
+* {
   box-sizing: border-box;
+}
+
+.calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $day-rows * $cell-size + $padding-calendar * 2 + $gap * 7;
   gap: $gap;
+  width: $day-rows * $cell-size + $padding-calendar * 2 + $gap * 7;
   padding: $padding-calendar;
 
+  $transition-duration: .5s;
+
+
   &__day {
-    box-sizing: border-box;
     border: 1px solid black;
     background-color: $background-color;
     height: $cell-size;
@@ -17,8 +22,7 @@
     justify-content: center;
     align-items: center;
 
-    transition: all;
-    transition-duration: .5s;
+    transition: color $transition-duration, transform $transition-duration;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
