--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,9 +1,12 @@
 body {
   margin: 0;
+}
+
+html {
   font-family: Arial, sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vw;
+  height: 100vh;
   font-size: 30px;
 }
