--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -41,13 +41,13 @@
   $days: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
 
   @each $day, $value in $days {
-    &--start-#{$day} :first-child{
+    &--start-day_#{$day} :first-child{
       margin-left: ($day-size + $day-gap) * $value;
     }
   }
 
   @for $i from 28 through 31 {
-    &--length-#{$i} {
+    &--month-length_#{$i} {
       :nth-child(n + #{$i + 1}) {
         display: none;
       }
