--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,15 +1,15 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $day-size * $columns-month + $gap * ($columns-month - 1);
+  width: $size-square-day * $columns-month + $gap * ($columns-month - 1) + $paddings;
   gap: $gap;
-  padding: $padding;
+  padding: $paddings;
 
 
   @each $week, $day in $week-days {
     &--start-day-#{$week}
     &__day:first-child{
-      margin-left: $day * ($day-size + $gap);
+      margin-left: $day * $size-square-with-gap;
     }
   }
 
@@ -21,28 +21,29 @@
   }
 
   &__day {
-    width: $day-size;
-    height: $day-size;
+    width: $size-square-day;
+    height: $size-square-day;
     border: 1px solid black;
     background-color: #eee;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     text-align: center;
-    line-height: $day-size;
+    line-height: $size-square-day;
     transition-duration: 0.5s;
     box-sizing: border-box;
 
-    @for $number from 1 through $days-in-month {
-      &:nth-child(#{$number})::before{
-        content: "#{$number}";
+    @for $numbr from 1 through $number-days-month {
+      &:nth-child(#{$numbr})::before{
+        content: "#{$numbr}";
       }
     }
 
     &:hover {
-      background-color: pink;
+      background-color: #ffc0cb;
       cursor: pointer;
       transform: translateY(-20px);
       transition-duration: 0.5s;
     }
   }
 }
+
