--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,11 +1,12 @@
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+
 }
 
 body {
-  height: 100vh;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  height: 100%;
 }
