--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,8 +1,8 @@
-$day-size: 100px;
-$padding: 10px;
+$size-square-day: 100px;
 $gap: 1px;
 $columns-month: 7;
-$days-in-month: 31;
+$paddings: 10px;
+$number-days-month: 31;
 $week-days: (
   mon: 0,
   tue: 1,
@@ -10,5 +10,6 @@ $week-days: (
   thu: 3,
   fri: 4,
   sat: 5,
-  sun: 6
+  sun: 6,
 );
+$size-square-with-gap: $size-square-day + $gap;
