--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,15 +3,6 @@ $day-height: 100px;
 $days-gap-size: 1;
 $days-in-row: 7;
 $calendar-paddings: 10px;
-$calendar-width: (
-  $day-width + $days-gap-size ) * $days-in-row - $days-gap-size;
-$days: (
-  mon 1,
-  tue 2,
-  wed 3,
-  thu 4,
-  fri 5,
-  sat 6,
-  sun 7
-);
+$calendar-width: ($day-width + $days-gap-size ) * $days-in-row - $days-gap-size;
+$days: ( mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7 );
 $transition-duration: 0.5s;
