--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,9 +45,11 @@ body {
     @for $i from 1 through 31 {
 
       &:nth-child(#{$i}) {
+
         &::before {
           content:'#{$i}';
         }
+
       }
 
     }
@@ -56,15 +58,21 @@ body {
 
   @each $day, $offset in $days {
 
-    &--start-day-#{$day} :first-child {
-      margin-left: ($day-width + $days-gap-size ) * ($offset - $days-gap-size);
+    &--start-day-#{$day} {
+
+      :first-child {
+        margin-left: ($day-width + $days-gap-size ) * ($offset - $days-gap-size);
+      }
+
     }
 
   }
 
   @for $i from 28 through 31 {
 
-    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+    &--month-length-#{$i}
+
+    &__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
 
