--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './blocks/variables';
+@import './blocks/calendar';
 
 body {
   display: flex;
@@ -8,59 +9,4 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
-}
-
-.calendar {
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  gap: $calendar-gap;
-  width: $calendar-size;
-
-  padding: $calendar-padding;
-
-  &__day {
-    box-sizing: border-box;
-    width: $day-size;
-    height: $day-size;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border: 1px solid #000;
-
-    background-color: #eee;
-    transition: all;
-    transition-duration: .5s;
-  }
-
-  &__day:hover {
-    transform: translateY(-20px);
-    cursor: pointer;
-    background-color: #FFBFCB;
-  }
-
-  @for $i from 1 through 31 {
-    &__day:nth-child(#{$i})::before{
-      content: '#{$i}';
-      color: black;
-    }
-  }
-
-  &--start-day {
-    @each $day, $i in $week-days {
-      &-#{$day} > :first-child {
-        margin-left: $i * ($day-size + $calendar-gap);
-      }
-    }
-  }
-
-  &--month-length {
-    @for $i from 28 through 31 {
-      &-#{$i} > :nth-child(n + #{$i + 1}) {
-        display: none;
-      }
-    }
-  }
 }
