formatted styles in main.scss

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -24,17 +24,17 @@
 
     cursor: pointer;
 
-    @for $i from 1 through 31 {
-      &__day:nth-child(#{$i})::before{
-        content: '#{$i}';
-        color: black;
-      }
+    &:hover {
+      transform: translateY(-20px);
+      background-color: #FFBFCB;
     }
   }
 
-  &__day:hover {
-    transform: translateY(-20px);
-    background-color: #FFBFCB;
+  @for $i from 1 through 31 {
+    &__day:nth-child(#{$i})::before{
+      content: '#{$i}';
+      color: black;
+    }
   }
 
   &--start-day {
