--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -28,12 +28,12 @@
       transform: translateY(-20px);
       background-color: #FFBFCB;
     }
-  }
 
-  @for $i from 1 through 31 {
-    &__day:nth-child(#{$i})::before{
-      content: '#{$i}';
-      color: black;
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before{
+        content: '#{$i}';
+        color: black;
+      }
     }
   }
 
