--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -6,12 +6,4 @@ $month-padding: 10px;
 $background-color: #eee;
 $color-black: #000;
 $color-pink: #FFBFCB;
-
-$weekdays:
-  1 "mon",
-  2 "tue",
-  3 "wed",
-  4 "thu",
-  5 "fri",
-  6 "sat",
-  7 "sun";
+$weekdays: 1 "mon", 2 "tue", 3 "wed", 4 "thu", 5 "fri", 6 "sat", 7 "sun";
