removed dublicates and added scss structure

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,144 +1,8 @@
-$block-size: 100;
-$default-days: 31;
+@import './utils/variables';
+@import './blocks/calendar';
 
 body {
   margin: 0;
   font-size: 30px;
   font-family: Arial, serif;
-}
-
-.calendar {
-  margin-inline: auto;
-  display: flex;
-  padding: 20px 10px 0;
-
-  flex-wrap: wrap;
-  width: ($block-size * 7 + 10);
-  height: auto;
-  gap: 1px;
-
-  @for $day from 1 through $default-days {
-    & :nth-child(#{$day}) {
-      display: flex;
-
-      &::after {
-        content: "#{$day}";
-        content-visibility: visible;
-        position: absolute;
-      }
-    }
-  }
-
-  &--days--28 {
-    @for $day from 1 through $default-days {
-      & :nth-child(#{$day}) {
-        display: flex;
-
-        &::after {
-          content: "#{$day}";
-          content-visibility: visible;
-          position: absolute;
-        }
-      }
-
-      @if $day > 28 {
-        & :nth-child(#{$day}) {
-          display: none;
-        }
-      }
-    }
-  }
-
-  &--days--29 {
-    @for $day from 1 through $default-days {
-      & :nth-child(#{$day}) {
-        display: flex;
-
-        &::after {
-          content: "#{$day}";
-          content-visibility: visible;
-          position: absolute;
-        }
-      }
-
-      @if $day > 29 {
-        & :nth-child(#{$day}) {
-          display: none;
-        }
-      }
-    }
-  }
-
-  &--days--30 {
-    @for $day from 1 through $default-days {
-      & :nth-child(#{$day}) {
-        display: flex;
-
-        &::after {
-          content: "#{$day}";
-          content-visibility: visible;
-          position: absolute;
-        }
-      }
-
-      @if $day > 30 {
-        & :nth-child(#{$day}) {
-          display: none;
-        }
-      }
-    }
-  }
-
-  & :first-child {
-    margin-left: ($block-size * 6 + 6);
-  }
-
-  &--start-day {
-    &--monday :first-child {
-      margin-left: 0;
-    }
-
-    &--tuesday :first-child {
-      margin-left: ($block-size * 1 + 1);
-    }
-
-    &--wednesday :first-child {
-      margin-left: ($block-size * 2 + 2);
-    }
-
-    &--thursday :first-child {
-      margin-left: ($block-size * 3 + 3);
-    }
-
-    &--friday :first-child {
-      margin-left: ($block-size * 4 + 4);
-    }
-
-    &--saturday :first-child {
-      margin-left: ($block-size * 5 + 5);
-    }
-
-    &--sunday :first-child {
-      margin-left: ($block-size * 6 + 6);
-    }
-  }
-
-  &__day {
-    box-sizing: border-box;
-    border: 1px solid black;
-    position: relative;
-    width: $block-size;
-    height: $block-size;
-    background-color: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.5s;
-
-    &:hover {
-      cursor: pointer;
-      background-color: #FFBFCB;
-      transform: translateY(-20px);
-    }
-  }
 }
