--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
-  padding: 10px;
-  max-width: $day-size * 7 + 6 * $gap;
+  padding: $padding;
+  max-width: $day-size * 7 + 6 * $gap + 2 * $padding;
 
   @each $day, $size in $days-of-week {
     &--start-day-#{$day} {
@@ -25,10 +25,15 @@
     position: relative;
     width: $day-size;
     height: $day-size;
-    box-sizing: border-box;
     background-color: $main-bg-color;
     border: 1px solid $main-black-color;
     transition: transform, background-color 0.5s ease;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: $highlight-color;
+      cursor: pointer;
+    }
 
     @for $days from 1 through 31 {
       &:nth-child(#{$days})::before {
@@ -38,12 +43,6 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
-    }
-
-    &:hover {
-      transform: translateY(-20px);
-      background-color: $highlight-color;
-      cursor: pointer;
     }
   }
 }
