--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
+@import './reset';
 @import './variables';
 @import './calendar';
 
 body {
-  margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   color: $main-black-color;
