--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,17 @@
 $main-bg-color: #eee;
-$day-size: 100px;
 $main-black-color: #000;
+$highlight-color: #ffbfcb;
+$day-size: 100px;
+$padding: 10px;
 $gap: 1px;
 $start-day-size: $day-size + $gap;
-$days-of-week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+$days-of-week: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
 $month-length: 28, 29, 30, 31;
-$highlight-color: #ffbfcb;
