--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,10 +10,17 @@ $week-days: (
   'sut': 5,
   'sun': 6
 );
+$transition-duration: 0.5s;
+$border-color: black;
+$background-color: #eee;
+$background-color-hover: #FFBFCB;
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -36,12 +43,12 @@ body {
     height: 100px;
 
     font-size: 30px;
-    text-align: cegit checkout developnter;
+    text-align: center;
     line-height: 100px;
 
-    border: 1px solid black;
-    background-color: #eee;
-    transition: background-color 0.5s, transform 0.5s;
+    border: 1px solid $border-color;
+    background-color: $background-color;
+    transition: background-color $transition-duration, transform $transition-duration;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i}):before {
@@ -72,9 +79,3 @@ body {
     }
   }
 }
-
-
-
-
-
-
