--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,54 @@
+$calendar-cell-size: 100px;
+$calendar-gap-size: 1px;
+$calendar-font-size: 30px;
+$weekdays: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+$final-days: 28, 29, 30, 31;
+
 body {
   margin: 0;
 }
+
+.calendar {
+  width: 7 * ($calendar-cell-size + $calendar-gap-size);
+  padding: 10px;
+
+  @each $start-day, $column in $weekdays {
+    &--#{$start-day} &__cell:first-child {
+      margin-left: calc(#{$column} * ($calendar-cell-size + $calendar-gap-size));
+    }
+  }
+
+  &__board {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $calendar-gap-size;
+  }
+
+  &__cell {
+    box-sizing: border-box;
+    height: $calendar-cell-size;
+    width: $calendar-cell-size;
+    border: 1px solid black;
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @for $day from 1 through 31 {
+      &:nth-child(n + #{$day})::before {
+        content:'#{$day}';
+        display: block;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transition: transform 0.5s;
+      transform: translateY(-20px);
+    }
+  }
+}
+
