--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,86 @@
-body {
-  margin: 0;
+$cell-size: 100px;
+$gap: 1px;
+$border-width: 1px;
+$font-size: 30px;
+$hover-color: #FFBFCB;
+$animation-duration: 0.5s;
+$font-family: Arial, Helvetica, sans-serif;
+
+@mixin flex-container($columns: 7) {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  max-width: calc(#{$columns} * #{$cell-size} + (#{$columns} - 1) * #{$gap});
+}
+
+$days-of-week: mon, tue, wed, thu, fri, sat, sun;
+
+@each $day in $days-of-week {
+  .calendar--start-#{$day} {
+    .calendar__day {
+      &:first-child {
+        margin-left: calc((list.index($days-of-week, $day) - 1) * (#{$cell-size} + #{$gap}));
+      }
+    }
+  }
+}
+
+.calendar {
+  @include flex-container;
+
+  padding: 10px;
+  margin: auto;
+}
+
+.calendar__day {
+  width: $cell-size;
+  height: $cell-size;
+  border: $border-width solid black;
+  box-sizing: border-box;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  cursor: pointer;
+  position: relative;
+  background-color: #eee;
+  transition: background-color $animation-duration, transform $animation-duration;
+
+  &::before {
+    content: '';
+    font-size: $font-size;
+    font-family: $font-family;
+    display: inline-block;
+    position: absolute;
+  }
+
+  &:hover {
+    background-color: $hover-color;
+    transform: translateY(-20px);
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
+  }
+}
+
+.calendar--month-28 {
+  .calendar__day:nth-child(n+29) {
+    display: none;
+  }
+}
+
+.calendar--month-29 {
+  .calendar__day:nth-child(n+30) {
+    display: none;
+  }
+}
+
+.calendar--month-30 {
+  .calendar__day:nth-child(n+31) {
+    display: none;
+  }
 }
