--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,5 @@
-  $day-size: 100px;
-  $next-day: $day-size + 1px;
-
-body {
-  margin: 0;
-}
-
-.conteiner-calendar {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  padding-top: 30px;
+  @import 'block/variables';
+  @import 'block/reset';
 
   .calendar {
     display: flex;
@@ -17,7 +7,8 @@ body {
     gap: 1px;
     text-align: center;
     line-height: $day-size;
-    width: $day-size * 7 + 10px;
+    width: $width-calendar;
+    margin: 0 auto;
 
     $days: "mon" 0,
            "tue" 1,
@@ -35,13 +26,10 @@ body {
       }
     }
 
-    @for $last-day from 28 to 32 {
-      &--month-#{$last-day} {
-        & :nth-child(#{$last-day + 1}),
-        & :nth-child(#{$last-day + 2}),
-        & :nth-child(#{$last-day + 3}) {
-          visibility: hidden;
-        }
+    @for $last-day from 28 through 31 {
+      &--month-#{$last-day}
+      &__day:nth-child(n + #{$last-day + 1}) {
+       display: none;
       }
     }
 
@@ -53,19 +41,19 @@ body {
       width: $day-size;
       height: $day-size;
       border: 1px solid black;
+      transition: .5s;
 
       &:hover {
         cursor: pointer;
         background-color: #FFBFCB;
         transform: translateY(-20px);
-        transition: 0.5s;
+
       }
 
-      @for $index from 1 to 32 {
+      @for $index from 1 through 31 {
         &:nth-child(#{$index})::before {
           content: "#{$index}";
         }
       }
     }
   }
-}
