--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,25 @@
+@import './blocks/variables';
+@import './blocks/calendar.scss';
+
+
+$days: (mon 0,
+  tue 1,
+  wed 2,
+  thu 3,
+  fri 4,
+  sat 5,
+  sun 6);
+$month-length: 31;
+$width: 100px;
+$gap: 1px;
+$day-weeks: 7;
+
+html{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
 }
+
