add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,36 @@
-$start-day: mon, tue, wed, thu, fri, sat, sun;
-$length: 31;
+$day-week: (mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 7);
+$day-width: 101px;
+$cell-width: 100px;
+$gap: 1px;
+
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
-  width: 706px;
+  gap: $gap;
+  width: calc(($cell-width + $gap) * 7);
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    width: 100px;
+    height: 100px;
+    background-color: #eee;
+    box-sizing: border-box;
+    transition-duration: 0.5s;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+ }
 
   &__day:hover {
     cursor: pointer;
@@ -17,46 +38,25 @@ body {
     transform: translateY(-20px);
     transition-duration: 0.5s;
   }
-
-  &__day::before {
-    content: "";
-    font-family: Arial, sans-serif;
-    font-size: 30px;
-    text-align: center;
-  }
 }
 
-@each $start, $index in (
-  mon: 1,
-  tue: 2,
-  wed: 3,
-  thu: 4,
-  fri: 5,
-  sat: 6,
-  sun: 7
-) {
+@each $start, $number in $day-week {
   .calendar--start-day-#{$start} {
     .calendar__day:first-child {
-      margin-left: $index * 101px - 101px;
+      margin-left: $number * $day-width - $day-width;
     }
   }
 }
 
 
-@for $i from 1 through $length {
+@for $i from 1 through 31 {
   .calendar__day:nth-child(#{$i})::before {
     content: "#{$i}";
-    border: 1px solid black;
-    width: 100px;
-    height: 100px;
-    background-color: #eee;
-    position: relative;
-    padding: 10px;
-    box-sizing: border-box;
-    transition-duration: 0.5s;
+    margin-left: 1px;
+  }
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .calendar--month-length-#{$i}
+  .calendar__day:nth-child(n + #{$i + 1}) {
+    display: none;
   }
 }
