--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
 
-    transition: transform 0.5s;
+    transition: all 0.5s;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before{
@@ -41,13 +41,13 @@
   $days: 'mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6;
 
   @each $day, $value in $days {
-    &--start-day_#{$day} :first-child{
+    &--start-day-#{$day} :first-child{
       margin-left: ($day-size + $day-gap) * $value;
     }
   }
 
   @for $i from 28 through 31 {
-    &--month-length_#{$i} {
+    &--month-length-#{$i} {
       :nth-child(n + #{$i + 1}) {
         display: none;
       }
