--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@use "./blocks/calendar.scss";
+@use "./utils/reset";
 @use "./blocks/page.scss";
-@use "./reset/reset.scss";
+@use "./blocks/calendar.scss";
