--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,22 +1,10 @@
+$font-family: Roboto, Arial, Helvetica, sans-serif;
 $color-grey: #eee;
-$color-pink: #FFBFCB;
+$color-pink: #ffbfcb;
 $animation-duration: 0.5s;
+$start-day: 1;
+$month-length: 31;
 $days-of-week: "mon", "tue", "wed", "thu", "fri", "sat", "sun";
 $day-width: 100px;
+$gap: 1px;
 
-@mixin calendar-day {
-  width: $day-width;
-  height: $day-width;;
-  border: 1px solid #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: $color-grey;
-  box-sizing: border-box;
-}
-
-@each $day in $days-of-week {
-  .calendar__day--#{start-day} {
-    @include calendar-day;
-  }
-}
