--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,58 @@
+@import './variables';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: $calendar-padding;
+  gap: $calendar-gap;
+  width: $calendar-width;
+
+  @each $day, $order in $week-days {
+    &--start-day-#{$day} :first-child {
+      margin-left: $order * ($calendar-size + $calendar-gap);
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} :nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: $calendar-size;
+    height: $calendar-size;
+    background-color: $day-color;
+    border: solid 1px $day-border;
+    transition: all 500ms;
+
+    @for $date from 1 through 31 {
+      &:nth-child(#{$date})::before {
+      content: '#{$date}';
+      font-size: $day-size;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  }
+
+    &:hover {
+      cursor: pointer;
+      background-color: $hover-color;
+      transform: translateY(-20px);
+    }
+  }
 }
