Fixed layout for Sunday

--- a/src/styles/blocks/layout.scss
+++ b/src/styles/blocks/layout.scss
@@ -32,7 +32,7 @@ body {
 
   &__day {
     @include square($day-width);
-    
+
     background-color: $background-color;
     border: 1px solid $color-black;
     position: relative;
@@ -59,7 +59,7 @@ body {
   }
 
   @each $index, $day in $weekdays {
-    &--#{$day} :first-child {
+    &--#{$day} :nth-child(0) {
       margin-left: $index * $day-width + $index;
     }
   }
