--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,26 +1,12 @@
-$gap: 1px;
-$block-size: 100px;
-$hover-color: #ffbfcb;
-$month: 31;
-$start-days: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
-$month-lenght: (
-  28: 0,
-  29: 1,
-  30: 2,
-  31: 3,
-);
+@import "./variables";
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .calendar {
@@ -28,6 +14,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
+  width: $day-rows * $block-size + ($day-rows - 1) * $gap;
 
   @each $day, $start in $start-days {
     &--start-day-#{$day} &__day:first-child {
