--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -20,7 +20,7 @@
     align-items: center;
 
     @for $index from 1 through 31 {
-      &:nth-child(#{$index}):before {
+      &:nth-child(#{$index})::before {
         content: "#{$index}";
       }
     }
