--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,5 +5,5 @@ $day-border-color: black;
 
 $calendar-padding: 10px;
 $calendar-gap: 1px;
-$calendar-width: calc(7 * #{$day-width} + 6 * $calendar-gap);
+$calendar-width: 7 * $day-width + 6 * $calendar-gap;
 
