add classes by default to calendar

--- a/src/styles/blocks/modifiers.scss
+++ b/src/styles/blocks/modifiers.scss
@@ -6,14 +6,14 @@
       }
     }
   }
-}
 
-@for $last-day from 28 through 31 {
-  .month--length-#{$last-day} {
-    @include calendar-styles;
+  @for $last-day from 28 through 31 {
+    &--month-length--#{$last-day} {
+      @include calendar-styles;
 
-    .calendar__day:nth-child(n + #{$last-day + 1}) {
-      display: none;
+      .calendar__day:nth-child(n + #{$last-day + 1}) {
+        display: none;
+      }
     }
   }
 }
