--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,10 @@
 $main-color: #eee;
 $square-size: 100px;
+$background-color: #FFBFCB;
 $number-font: Arial, Helvetica, sans-serif;
 $number-size: 30px;
 $gap: 1px;
+$transition-time: 0.5s;
 $columns: 7;
 $padding: 10px;
 $days-of-week: (
