add task solution fix

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -32,13 +32,12 @@
 
     &:hover {
       cursor: pointer;
-      background-color: #FFBFCB;
-      transform: translateY(-20px);
+      transform: translateY(-1px);
     }
   }
 
   @each $day, $value in $days {
-    &--start-day-#{$day} {
+    &--start-day-#{$day} > :first-child {
       margin-left: #{$value * $day-width + $value * $calendar-gap};
     }
   }
