$calendar-size fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
-@use 'utils/reset.scss' as *;
-@use 'utils/variables.scss' as *;
-@use 'blocks/calendar.scss' as *;
+@use "utils/reset.scss";
+@use "utils/variables.scss" as *;
+@use "blocks/calendar.scss" as *;
+@use "blocks/page.scss" as *;
